--- a/code/Snakefile
+++ b/code/Snakefile
@@ -72,5 +72,4 @@ rule inference:
     output:
        "../data/inference/{cancer_type}_{feature_type}_{nits}_{model}ROO.RData"
     shell:
-        "Rscript --vanilla 2_inference/fit_PCAWG.R --cancertype {{cancer_type}} --typedata {{feature_type}}\
-         --infile {input} --output {output} --niterations {{nits}} --model {{model}}"
+        "Rscript --vanilla 2_inference/fit_PCAWG.R --cancertype {{cancer_type}} --typedata {{feature_type}} --infile {input} --output {output} --niterations {{nits}} --model {{model}}"
