--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,6 @@ code/2_inference_TMB/mm_multinomial/*.so
 code/2_inference_TMB/mm_multinomial/*.o
 
 results/results_stan/
+code/3_analysis/validation/Homo_sapiens.GRCh37.87.sqlite
+
 
