--- a/code/Snakefile
+++ b/code/Snakefile
@@ -316,8 +316,8 @@ rule all:
       # expand("../data/assessing_models_simulation/summaries_synthetic_DA/{datasetgeneration}.RDS",\
       # expand("../data/assessing_models_simulation/summaries_synthetic_DA/{datasetgeneration}.RDS",\
       # datasetgeneration=['GenerationMixturefewersmallsignaturespairedKidneyRCCPCAWG'])
-      expand("../data/assessing_models_simulation/summaries_synthetic_DA/{datasetgeneration}.RDS",\
-      datasetgeneration=['GenerationMixturefewersignaturespaired'+x for x in ['CNSGBMPCAWG']])
+      # expand("../data/assessing_models_simulation/summaries_synthetic_DA/{datasetgeneration}.RDS",\
+      # datasetgeneration=['GenerationMixturefewersignaturespaired'+x for x in ['CNSGBMPCAWG']])
 
 # "/Users/morril01/Documents/PhD/GlobalDA/data/restrictsummaries_synthetic_DAed/pcawg/annovar_annotation/02917220-6a7a-46a1-8656-907e96bef88e.consensus.20160830.somatic.snv_mnv.vcf.annovar"
 # expand(['/Users/morril01/Documents/PhD/GlobalDA/data/restricted/pcawg/annovar_annotation/'+x.strip('.gz')+'.annovar' for x in listdir('/Users/morril01/Documents/PhD/GlobalDA/data/restricted/pcawg/pcawg_restricted_snv/') if re.search('.gz$', x)])
